--- a/Fundamento da computação/01_Introducao.html
+++ b/Fundamento da computação/01_Introducao.html
@@ -69,7 +69,7 @@
 
     <h2>Componentes da Arquitetura de von Neumann</h2>
     <ul>
-        <li><strong>Unidade de Controle (CU):</strong> Gerencia e controla a execução das instruções.</li>
+        <li><strong>Unidade de Controle:</strong> Gerencia e controla a execução das instruções.</li>
         <li><strong>Unidade Lógica e Aritmética (ALU):</strong> Realiza operações aritméticas e lógicas.</li>
         <li><strong>Memória:</strong> Armazena dados e instruções.</li>
         <li><strong>Unidade de Entrada/Saída (I/O):</strong> Interage com dispositivos periféricos.</li>
