--- a/Linguagens de marcação/Atividades/Portifólio com Layout/index.html
+++ b/Linguagens de marcação/Atividades/Portifólio com Layout/index.html
@@ -24,7 +24,7 @@
       <h1>SERVICES</h1>
       <p>Lorem ipsum dolor sit amet consectetur, dolor sit amet consectetur.</p>
     </section>
-    <section class="services-container">
+    <section class="box">
       <div class="service">
         <span class="circle-icon">
           <i class="fa fa-desktop" aria-hidden="true"></i>
