--- a/Linguagens de marcação/Atividades/Portifólio com Layout/index.html
+++ b/Linguagens de marcação/Atividades/Portifólio com Layout/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-
+  <!-- Header -->
   <header>
     <div class="intro-text">
       <h1>Nome do Portifólio</h1>
@@ -18,59 +18,59 @@
     </div>
   </header>
 
-
+  <!-- Content -->
   <main>
     <section class="service-description">
       <h1>SERVICES</h1>
       <p>Lorem ipsum dolor sit amet consectetur, dolor sit amet consectetur.</p>
     </section>
-    <section class="box">
-      <div class="service">
-        <span class="circle-icon">
-          <i class="fa fa-desktop" aria-hidden="true"></i>
-        </span>
-        <h1>Consectetur lorem</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-      </div>
-      <div class="service">
-        <span class="circle-icon">
-          <i class="fa fa-thermometer-quarter" aria-hidden="true"></i>
-        </span>
-        <h1>Lorem ipsum dolor</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur.</p>
-      </div>
-      <div class="service">
-        <span class="circle-icon">
-          <i class="fa fa-bar-chart" aria-hidden="true"></i>
-        </span>
-        <h1>Consectetur elit</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-      </div>
-      <div class="service">
-        <span class="circle-icon">
-          <i class="fa fa-envelope-o" aria-hidden="true"></i>
-        </span>
-        <h1>Lorem ipsum dolor</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur elit. Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-      </div>
-      <div class="service">
-        <span class="circle-icon">
-          <i class="fa fa-flask" aria-hidden="true"></i>
-        </span>
-        <h1>Consectetur ipsum</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing. Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-      </div>
-      <div class="service">
-        <span class="circle-icon">
-          <i class="fa fa-film" aria-hidden="true"></i>
-        </span>
-        <h1>Lorem ipsum dolor</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla atque id autem aliquid reiciendis minima.</p>
-      </div>
-    </section>
+   <div class='flexbox'>
+     <section class="service">
+       <span class="circle-icon">
+         <i class="fa fa-desktop" aria-hidden="true"></i>
+       </span>
+       <h1>Consectetur lorem</h1>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+     </section>
+     <section class="service">
+       <span class="circle-icon">
+         <i class="fa fa-thermometer-quarter" aria-hidden="true"></i>
+       </span>
+       <h1>Lorem ipsum dolor</h1>
+       <p>Lorem ipsum dolor sit amet, consectetur.</p>
+     </section>
+     <section class="service">
+       <span class="circle-icon">
+         <i class="fa fa-bar-chart" aria-hidden="true"></i>
+       </span>
+       <h1>Consectetur elit</h1>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+     </section>
+     <section class="service">
+       <span class="circle-icon">
+         <i class="fa fa-envelope-o" aria-hidden="true"></i>
+       </span>
+       <h1>Lorem ipsum dolor</h1>
+       <p>Lorem ipsum dolor sit amet, consectetur elit. Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+     </section>
+     <section class="service">
+       <span class="circle-icon">
+         <i class="fa fa-flask" aria-hidden="true"></i>
+       </span>
+       <h1>Consectetur ipsum</h1>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing. Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+     </section>
+     <section class="service">
+       <span class="circle-icon">
+         <i class="fa fa-film" aria-hidden="true"></i>
+       </span>
+       <h1>Lorem ipsum dolor</h1>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla atque id autem aliquid reiciendis minima.</p>
+     </section>
+   </div>
   </main>
 
-
+  <!-- Footer -->
   <footer>
     <section class="footer-content">
       <section class="address">
@@ -96,7 +96,7 @@
       </section>
       <section class="about">
         <h1>ABOUT FREELANCER</h1>
-        <p>Freelance is a free to use, open source Bootstrap theme created by Start Bootstrap.</p>
+        <p>Freelance is a free to use, open<br> source Bootstrap theme created by <br>Start Bootstrap.</p>
       </section>
     </section>
     <section class="copyright">
